<resources>
    <string name="app_name">Sparring Knight</string>
    <string name="devchallenge3">Sparring Knight</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Mail</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entra">¡Entra!</string>
    <string name="batirse_en_duelo">¡Batirse en duelo!</string>
    <string name="caballeros_conocidos">Caballeros conocidos</string>
    <string name="ajustes">Ajustes</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registro">Registro</string>
    <string name="perfil">Perfil de caballeria</string>
    <string name="volver">Volver</string>


</resources>