<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devchallenge3"
        android:textColor="@color/textoTitulos"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/buttonDuelo"
        android:layout_width="247dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/Botones"
        android:text="@string/batirse_en_duelo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/titulo"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.191" />

    <Button
        android:id="@+id/buttonPerfil"
        android:layout_width="247dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/Botones"
        android:text="@string/perfil"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonDuelo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonDuelo"
        app:layout_constraintTop_toBottomOf="@+id/buttonDuelo"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/buttonAjustes"
        android:layout_width="247dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/Botones"
        android:text="@string/ajustes"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonDuelo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/buttonDuelo"
        app:layout_constraintTop_toBottomOf="@+id/buttonDuelo"
        app:layout_constraintVertical_bias="0.321" />


</androidx.constraintlayout.widget.ConstraintLayout>